--- a/配置指南.md
+++ b/配置指南.md
@@ -8,18 +8,31 @@
 pip install -r requirements.txt
 ```
 
-### 2. 配置 API Key
+### 2. 运行应用
 
-#### 获取 Qwen API Key
+```bash
+streamlit run app.py
+```
 
-1. 访问阿里云 DashScope 控制台：https://dashscope.console.aliyun.com/
+应用会自动在浏览器中打开。
+
+### 3. 配置 LLM API Key（可选，推荐）
+
+#### 方式 A：在应用界面配置（最简单）✨
+
+1. 打开应用后，在左侧边栏找到 **"🔑 LLM API 配置"**
+2. 点击展开配置面板
+3. 输入你的 API Key 和 Endpoint
+4. 勾选 **"🤖 使用 LLM 智能提取"**
+5. 开始分析
+
+**获取 API Key：**
+1. 访问 [阿里云 DashScope](https://dashscope.console.aliyun.com/)
 2. 注册/登录账号
 3. 创建 API Key
-4. 复制你的 API Key
+4. 复制并粘贴到应用中
 
-#### 配置方式
-
-**方式 A：使用 .env 文件（推荐）**
+#### 方式 B：使用 .env 文件
 
 1. 复制示例文件：
 ```bash
@@ -32,9 +45,9 @@ LLM_API_KEY=sk-xxxxxxxxxxxxxxxxxxxxxxxx
 LLM_ENDPOINT=https://dashscope.aliyuncs.com/compatible-mode/v1
 ```
 
-3. 保存文件
+3. 保存文件并重启应用
 
-**方式 B：设置环境变量**
+#### 方式 C：设置环境变量
 
 Windows PowerShell:
 ```powershell
@@ -48,69 +61,154 @@ set LLM_API_KEY=sk-xxxxxxxxxxxxxxxxxxxxxxxx
 set LLM_ENDPOINT=https://dashscope.aliyuncs.com/compatible-mode/v1
 ```
 
-### 3. 运行应用
-
-```bash
-streamlit run app.py
-```
-
-应用会自动在浏览器中打开。
-
 ## 使用说明
+
+### 基础使用（无需配置）
 
 1. **输入研究领域关键词**
    - 例如："量子计算"、"人工智能"、"深度学习"
 
 2. **选择时间范围**
-   - 起始年月：例如 2023-01
-   - 结束年月：例如 2024-12
+   - 起始日期：例如 2023-01-01
+   - 结束日期：例如 2024-12-04
 
-3. **点击"分析"按钮**
+3. **点击"🚀 开始分析"按钮**
    - 系统会从 OpenAlex 获取论文数据
-   - 使用 LLM 提取关键词
+   - 使用规则提取关键词
    - 生成关键词共现热力图
 
 4. **查看结果**
    - 热力图显示关键词之间的共现关系
    - 颜色越深表示共现频率越高
 
+### 高级使用（配置 LLM）
+
+1. **配置 LLM API Key**
+   - 在侧边栏展开 "🔑 LLM API 配置"
+   - 输入 API Key 和 Endpoint
+
+2. **启用 LLM 智能提取**
+   - 勾选 "🤖 使用 LLM 智能提取"
+
+3. **开始分析**
+   - LLM 会进行语义理解
+   - 自动提炼核心关键词
+   - 过滤完整标题和宽泛概念
+
+4. **查看改进效果**
+   - 更准确的关键词
+   - 更清晰的研究热点
+   - 更好的趋势识别
+
 ## 功能说明
 
-### 完整功能（配置 LLM API Key）
-- ✅ 一区期刊识别
-- ✅ 智能关键词提取
+### 🤖 LLM 智能提取（配置 API Key 后）
+- ✅ 语义理解标题和摘要
+- ✅ 自动提炼核心关键词
+- ✅ 过滤完整标题
+- ✅ 识别研究热点和趋势
+- ✅ 适应不同领域
+
+### 📝 规则提取（默认，无需配置）
+- ✅ OpenAlex 数据获取
+- ✅ 作者关键词提取
+- ✅ 标题和摘要短语提取
 - ✅ 关键词共现分析
 - ✅ 热力图可视化
 
-### 基础功能（未配置 LLM API Key）
-- ✅ OpenAlex 数据获取
-- ❌ 期刊过滤（跳过）
-- ❌ 关键词提取（无法生成热力图）
+**推荐：** 配置 LLM API Key 以获得最佳效果！
 
 ## 中文显示问题
 
 ### 如果热力图中文显示为方框
 
-应用已自动配置中文字体支持，但如果仍然出现乱码，可以：
+应用已自动配置中文字体支持，但如果仍然出现乱码，请按以下步骤操作：
 
-**Windows 系统：**
-- 系统会自动使用 SimHei（黑体）或 Microsoft YaHei（微软雅黑）
-- 这些字体通常已预装在 Windows 系统中
+### 步骤 1: 检查字体
 
-**Mac 系统：**
-- 系统会尝试使用 Arial Unicode MS
-- 如果仍有问题，可以安装中文字体
-
-**Linux 系统：**
+运行字体检查脚本：
 ```bash
-# Ubuntu/Debian
-sudo apt-get install fonts-wqy-zenhei
-
-# 或安装其他中文字体
-sudo apt-get install fonts-noto-cjk
+python check_fonts.py
 ```
 
-安装字体后，重启应用即可。
+这个脚本会：
+- ✅ 检测系统中可用的中文字体
+- ✅ 生成测试图片验证字体
+- ✅ 提供安装建议
+
+### 步骤 2: 安装中文字体
+
+**Windows 系统：**
+1. 系统通常已预装 SimHei（黑体）或 Microsoft YaHei（微软雅黑）
+2. 如果没有，请：
+   - 打开"设置" → "时间和语言" → "语言"
+   - 添加中文语言包
+   - 重启电脑
+
+**Linux 系统（Ubuntu/Debian）：**
+```bash
+# 方案 1: 安装文泉驿微米黑
+sudo apt-get update
+sudo apt-get install fonts-wqy-zenhei
+
+# 方案 2: 安装思源黑体（推荐）
+sudo apt-get install fonts-noto-cjk
+
+# 方案 3: 安装文泉驿正黑
+sudo apt-get install fonts-wqy-zenhei fonts-wqy-microhei
+
+# 刷新字体缓存
+fc-cache -fv
+```
+
+**Mac 系统：**
+- 系统自带中文字体（PingFang SC, STHeiti 等）
+- 通常不需要额外安装
+- 如有问题，请检查"系统偏好设置" → "语言与地区"
+
+### 步骤 3: 重启应用
+
+安装字体后：
+```bash
+# 重启 Streamlit 应用
+streamlit run app.py
+```
+
+应用启动时会显示检测到的字体：
+- ✅ 绿色提示：已检测到中文字体
+- ⚠️ 黄色警告：未检测到中文字体
+
+### 步骤 4: 验证效果
+
+1. 运行应用并生成热力图
+2. 检查坐标轴标签是否正常显示中文
+3. 如果仍有问题，查看侧边栏的"中文字体说明"
+
+### 常见问题
+
+**Q: 安装字体后仍显示方框**
+A: 
+1. 确认字体已正确安装：运行 `python check_fonts.py`
+2. 清除 matplotlib 缓存：删除 `~/.matplotlib` 目录
+3. 重启 Python 和 Streamlit
+
+**Q: Linux 系统字体安装失败**
+A:
+```bash
+# 检查字体是否安装
+fc-list :lang=zh
+
+# 如果没有输出，说明没有中文字体
+# 重新安装并刷新缓存
+sudo apt-get install --reinstall fonts-wqy-zenhei
+fc-cache -fv
+```
+
+**Q: 字体检查脚本显示有字体，但应用仍显示方框**
+A:
+1. 重启 Streamlit 应用
+2. 清除浏览器缓存
+3. 检查是否有多个 Python 环境
 
 ## 常见问题
 
